# Ecommerce-AI

./: .dockerignore  .env.example  .gitIgnore  DockerFile  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/agents/: ecommerce_agent.py  graph.py  nodes.py  state.py  tools.py
app/ai/: embeddings.py  llm.py  loader.py  prompts.py  rag.py  retriever.py  vector_store.py
app/api/v1/: chat.py  health.py  routes.py
app/core/: config.py  logging.py
app/documents/: refund_policy.md  shipping_policy.md
app/scripts/: ingest.py  test_agent.py  test_llm.py  test_rag.py
app/services/: chat_service.py  product_service.py
